# CPPClipping

./: CMakeLists.txt  compile_commands.json  imgui.ini
cmake/imgui/: CMakeLists.txt
json_storage/: clip.json
src/: main.cpp
src/gui/: main.cpp
src/logic/: clip.hpp  clipping_storage.cpp  clipping_storage.hpp  file_handler.cpp  file_handler.hpp
vendors/: imgui.ini
